<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu_tab"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/m30">


            <TextView
                android:id="@+id/text_manage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_e1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m20"
                android:background="@drawable/bottom_line_bg"
                android:gravity="left"
                android:paddingTop="@dimen/m20"
                android:paddingBottom="@dimen/m20"
                android:text="@string/account_action1" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line_bg"
                android:gravity="left"
                android:paddingTop="@dimen/m20"
                android:paddingBottom="@dimen/m20"
                android:text="@string/account_action2" />

            <TextView
                android:id="@+id/text_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m30"
                android:text="@string/settings_e2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m20"
                android:background="@drawable/bottom_line_bg"
                android:gravity="left"
                android:paddingTop="@dimen/m20"
                android:paddingBottom="@dimen/m20"
                android:text="@string/about_action1" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line_bg"
                android:gravity="left"
                android:paddingTop="@dimen/m20"
                android:paddingBottom="@dimen/m20"
                android:text="@string/about_action2" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line_bg"
                android:gravity="left"
                android:paddingTop="@dimen/m20"
                android:paddingBottom="@dimen/m20"
                android:text="@string/about_action3" />

            <Button
                android:id="@+id/logout_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m20"
                android:background="@drawable/bottom_line_bg"
                android:gravity="left"
                android:paddingTop="@dimen/m20"
                android:paddingBottom="@dimen/m20"
                android:text="@string/settings_e3"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/deact_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line_bg"
                android:gravity="left"
                android:paddingTop="@dimen/m20"
                android:paddingBottom="@dimen/m20"
                android:text="@string/settings_e4"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.TabLayout
        android:id="@+id/menu_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true">


        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />
    </android.support.design.widget.TabLayout>

</RelativeLayout>
