<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu_tab"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/channel_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_tab1" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_tab2" />
            </android.support.design.widget.TabLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/msg_recycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m250"
                android:padding="@dimen/m10">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/text_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/m10"
                android:text="@string/manage_title"
                android:textSize="@dimen/h2" />

            <LinearLayout
                android:id="@+id/manage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:drawablePadding="@dimen/m10"
                    android:onClick="goToPayments"
                    android:text="@string/manage_tab1"
                    android:textSize="@dimen/p1" />


                <Button
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/m10"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:drawablePadding="@dimen/m10"
                    android:onClick="goToProperties"
                    android:text="@string/manage_tab2"
                    android:textSize="@dimen/p1" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:drawablePadding="@dimen/m10"
                    android:onClick="goToDocuments"
                    android:text="@string/manage_tab3"
                    android:textSize="@dimen/p1" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:drawableTop="@mipmap/ic_launcher_round"
                    android:drawablePadding="@dimen/m10"
                    android:text="@string/manage_tab4"
                    android:textSize="@dimen/p1" />
            </LinearLayout>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:padding="@dimen/m10"
                android:text="@string/recent_activities_title"
                android:textSize="@dimen/m20" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.TabLayout
        android:id="@+id/menu_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true">


        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@mipmap/ic_launcher_round" />
    </android.support.design.widget.TabLayout>

</RelativeLayout>
